Add per CPU counter map

--- a/xdp_pass_and_redirect/Makefile
+++ b/xdp_pass_and_redirect/Makefile
@@ -1,7 +1,9 @@
 # SPDX-License-Identifier: (GPL-2.0 OR BSD-2-Clause)
 
 USER_TARGETS   := ids
+USER_TARGETS   += pe_ids
 BPF_TARGETS    := af_xdp_kern
+BPF_TARGETS    += pe_af_xdp_kern
 
 # Define C-code objects USER_TARGETS needs
 USER_TARGETS_OBJS := common_params.o common_user_bpf_xdp.o
